added basic overlays

--- a/vss-web/src/index.html
+++ b/vss-web/src/index.html
@@ -36,7 +36,7 @@
   <script>
 
   //import default values
-  var DEF_VALUES_STRING = $.getJSON({ 'url': "./ed_control_default_values.json", 'async': false }).responseText;
+  var DEF_VALUES_STRING = $.getJSON({ 'url': "./normal.json", 'async': false }).responseText;
   var simulationValues = JSON.parse(DEF_VALUES_STRING);
   simulationValues.xres = 1920;
   simulationValues.yres = 1080;
