--- a/vss-mobile/android/src/main/assets/en/index.html
+++ b/vss-mobile/android/src/main/assets/en/index.html
@@ -4,15 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/pico.css">
-    <title>Hello, world!</title>
+    <title>Welcome!</title>
   </head>
   <body>
     <main>
-      <h1>Hello, world!</h1>
+      <h1>Welcome!</h1>
       <div class="grid">
-        <button>Primary</button>
-        <button class="secondary">Secondary</button>
-        <button class="contrast">Contrast</button>
+        <button onclick="Activity.loadPage('custom.html');">Custom</button>
+        <button onclick="Activity.loadPage('achromatopsia.html');">Achromatopsia</button>
+        <button onclick="Activity.loadPage('ametropia.html');">Ametropia</button>
+        <button onclick="Activity.loadPage('cataract.html');">Cataract</button>
+        <button onclick="Activity.loadPage('color-blindness.html');">Color Blindness</button>
+        <button onclick="Activity.loadPage('glaucoma.html');">Glaucoma</button>
+        <button onclick="Activity.loadPage('macular-degeneration.html');">Macular Degeneration</button>
+        <button onclick="Activity.loadPage('night-blindness.html');">Night Blindness</button>
+        <button onclick="Activity.loadPage('presbyopia.html');">Presbyopia</button>
       </div>
     </main>
   </body>
