Tweak UI code a bit

--- a/vss-mobile/android/src/main/assets/index.html
+++ b/vss-mobile/android/src/main/assets/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/pico.css">
   <script src="js/jquery.js"></script>
   <script src="js/simulator-bridge.js"></script>
-  <title>Welcome!</title>
+  <title>HowTheySee</title>
 </head>
 
 <body>
