--- a/vss-mobile/android/src/main/assets/index.html
+++ b/vss-mobile/android/src/main/assets/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/pico.css">
+  <link rel="stylesheet" href="css/app.css">
   <script src="js/jquery.js"></script>
   <script src="js/simulator-bridge.js"></script>
   <title>HowTheySee</title>
