Working on vss-web initialization

--- a/vss-web/app/index.html
+++ b/vss-web/app/index.html
@@ -3,6 +3,6 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
   </head>
   <body>
-    <canvas id="canvas" width="800" height="600" style="border: 1px solid black"></canvas>
+    <div id="vss-container"></div>
   </body>
 </html>
