--- a/vss-web/app/index.html
+++ b/vss-web/app/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
+    <title>vss-web</title>
   </head>
   <body>
     <div id="vss-container"></div>
