--- a/vss-web/app/index.html
+++ b/vss-web/app/index.html
@@ -5,5 +5,6 @@
   </head>
   <body>
     <div id="vss-container"></div>
+    <input type="file" id="imageUpload" accept="image/*">
   </body>
 </html>
